--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
     "bootstrap": "^4.4.1",
+    "mark.js": "^8.11.1",
+    "ngx-markjs": "^0.1.2",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "rxjs": "~6.4.0",
